<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EquuleusCapstone</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="loginButtonString">Log In</string>
    <string name="loginTitle">Log In To Your Google Account</string>
    <string name="emailHint">gmail</string>
    <string name="passwordHint">password</string>
    <string name="createButton">Create</string>
    <string name="contactsButton">Contacts</string>
    <string name="timesButton">Times</string>
    <string name="addTitle">Add New Contact</string>
    <string name="addTimesTitle">Add New Unavailable Time</string>
    <string name="timesHint">00</string>
    <string name="updateButton">Add Restricted Time</string>
    <string name="importButton">Import</string>
    <string name="noteButton">Note</string>
    <string name="eventTitle">Add A New Event</string>
    <string name="eventHint">Title Of Event</string>
    <string name="contactsTitle">Add From Contacts</string>
    <string name="confirmButton">Confirm</string>
    <string name="title_activity_contacts_screen">ContactsScreen</string>
    <string name="addNewButton">Add Contact</string>
    <string name="title_activity_times_screen">TimesScreen</string>

    <string-array name="am_pm">
        <item>AM</item>
        <item>PM</item>
    </string-array>
    <string-array name="hours">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="minutes">
        <item>00</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
    </string-array>

    <string name="title_activity_notification_screen">NotificationScreen</string>
    <string name="hello_world">Hello world!</string>
    <string name="notificationString">Notifications</string>
    <string name="title_activity_new_event_screen">NewEventScreen</string>
    <string name="contactEmailHint">Email of Friend</string>
    <string name="durationHint">Duration in Minutes</string>

</resources>
