<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainScreen" >

     <TableRow
         android:id="@+id/mainTopRow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >

         <Space
             android:id="@+id/space1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="4" />
        
         <Button
            android:id="@+id/notificationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/noteButton">
        </Button>
     </TableRow>
    <TableRow
        android:id="@+id/mainMiddleRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <ScrollView
            android:id="@+id/meetingsScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
			android:layout_span="2">
            
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </TableLayout>
        </ScrollView>

    </TableRow>

    <TableRow
        android:id="@+id/mainBottomRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp" >
        
        <Button
            android:id="@+id/createButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/createButton">
        </Button>
        <Button
            android:id="@+id/contactsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/contactsButton">
            
        </Button>
        <Button
            android:id="@+id/timesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/timesButton">
            
        </Button>
        
	</TableRow>
</TableLayout>
