<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewEventScreen" >

        <TableRow
        android:id="@+id/eventHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_weight="1"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/eventTitle"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eventTitle" />

    </TableRow>


    <TableRow
        android:id="@+id/eventNameRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" 
        android:layout_weight="1">

        <EditText
            android:id="@+id/eventNameText"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/eventHint" >

        </EditText>

    </TableRow>
    
    <TableRow
        android:id="@+id/durationRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:gravity="center_horizontal"
        android:layout_weight="1">

        <EditText
            android:id="@+id/durationField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/durationHint"
            android:inputType="number" />

    </TableRow>
	<TableRow
        android:id="@+id/eventScrollRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4" >

        <ScrollView
            android:id="@+id/eventAddContactScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
			android:layout_span="2">
            
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </TableLayout>
        </ScrollView>

    </TableRow>
    <TableRow
        android:id="@+id/addContactsRow"
        android:layout_width="wrap_content"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content" 
        android:layout_weight="1">

        <EditText
            android:id="@+id/addContactField"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/contactEmailHint"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>

    </TableRow>

    <TableRow
        android:id="@+id/confirmButtonRow"
        android:layout_width="wrap_content"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content" 
		android:layout_weight="1">
        <Button
            android:id="@+id/confirmButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmButton" />

    </TableRow>

    <TableRow
        android:id="@+id/emptyRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3" >
    </TableRow>
    
</TableLayout>
