<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login" >

    <TableRow
        android:id="@+id/loginHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_weight="1"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginTitle" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:gravity="center_horizontal"
        android:layout_weight="3">

        <TextView
            android:id="@+id/errorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            />

    </TableRow>

    <TableRow
        android:id="@+id/emailRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" 
        android:layout_weight="1">

        <EditText
            android:id="@+id/emailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress" 
            android:gravity="center_horizontal">

            <requestFocus />
        </EditText>

    </TableRow>

    <TableRow
        android:id="@+id/passwordRow"
        android:layout_width="wrap_content"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content" 
        android:layout_weight="1">

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/passwordHint"
            android:inputType="textPassword" 
            android:gravity="center_horizontal"/>

    </TableRow>

    <TableRow
        android:id="@+id/loginButtonRow"
        android:layout_width="wrap_content"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content" 
		android:layout_weight="1">
        <Button
            android:id="@+id/loginButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginButtonString" />

    </TableRow>

    <TableRow
        android:id="@+id/emptyRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3" >
    </TableRow>

</TableLayout>
