<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ContactsScreen" >

    <TableRow
        android:id="@+id/contactsTopRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

         <Space
             android:id="@+id/space1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="4" />
        
         <Button
             android:id="@+id/notificationButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/noteButton" >

        </Button>
     </TableRow>

    <TableRow
        android:id="@+id/contactsMiddleRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <ScrollView
            android:id="@+id/contactsScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
			android:layout_span="2">
            
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </TableLayout>
        </ScrollView>

    </TableRow>

    <TableRow
        android:id="@+id/contactsBottomRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp" >

        <EditText
            android:id="@+id/newContactEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" 
            android:hint="@string/emailHint"
            android:ems="10"
            android:layout_weight="7">
        </EditText>

        <Button
            android:id="@+id/newContactButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addNewButton"
            android:layout_weight="1" />

	</TableRow>
    
</TableLayout>
